# nnpf

./: .gitignore  Allen-cahn.py  Init_reaction.py  LICENSE.md  README.md  TODO.md  allen_cahn_DR.py  allen_cahn_problem.py  allen_cahn_splitting.py  anim_allen_cahn.py  anim_heat_problem.py  anim_mean_curvature_problem.py  anim_phase_field.py  domain.py  environment_cpu.yml  environment_gpu.yml  exp_heatarray_conv.py  exp_willmore_parallel.py  exp_willmore_parallel.sh  heat_array_model.py  heat_problem.py  lightning_test.py  mean_curvature_problem.py  model_infos.py  nn_models.py  nn_toolbox.py  phase_field.py  problem.py  pyproject.toml  reaction_model.py  reaction_problem.py  requirements.txt  self_test.py  setup.cfg  shapes.py  splitting.py  steiner_problem.py  test.py  toolboxgeo.py  trainer.py  (+4 more)
scripts/: anim_mean_curvature_problem.py  anim_phase_field.py  anim_steiner_problem.py  exp_heatarray_conv.py  exp_heatarray_shuffle.py  exp_steiner_parallel.py  exp_willmore_parallel.py  volume_allen_cahn.py
src/nnpf/: __main__.py
src/nnpf/cmd/: __init__.py  bench.py  infos.py  selftest.py  train.py
src/nnpf/datasets/: __init__.py  phase_field.py
src/nnpf/domain/: domain.py
src/nnpf/fft/: __init__.py  domain.py  toolbox.py
src/nnpf/functional/: __init__.py  heat.py  norm.py  norms.py  operators.py  phase_field.py  utils.py
src/nnpf/io/: __init__.py  tensorboard.py  vtk.py
src/nnpf/models/: __init__.py  allen_cahn_splitting.py  heat_array.py  reaction.py
src/nnpf/nn/: __init__.py  conv.py  models.py  utils.py
src/nnpf/problems/: __init__.py  problem.py
src/nnpf/problems/allen_cahn/: datasets.py  problem.py  utils.py
src/nnpf/problems/heat/: datasets.py  problem.py  solution.py
src/nnpf/problems/mean_curvature/: __init__.py  datasets.py  problem.py  utils.py
src/nnpf/problems/reaction/: __init__.py  datasets.py  problem.py  solution.py
src/nnpf/problems/steiner/: datasets.py  problem.py  utils.py
src/nnpf/problems/willmore/: datasets.py  problem.py  utils.py
src/nnpf/shapes/: __init__.py  operators.py  shapes.py  slices.py  utils.py
src/nnpf/trainer/: __init__.py  trainer.py
src/nnpf/utils/: __init__.py  inspect.py  path.py
src/nnpf/visu/: __init__.py  visu.py
