[build-system]
requires = [
    "setuptools>=64",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "nnpf"
version = "1.0.2"
description = "Neural Network for Phase-Field models"
readme = "README.md"
authors = [
    {name = "Roland Denis", email = "denis@math.univ-lyon1.fr"},
    {name = "Garry Terii", email = "terii@math.univ-lyon1.fr"},
]
maintainers = [{name = "Roland Denis", email = "denis@math.univ-lyon1.fr"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["phase field", "mean curvature", "neural network"]
dependencies = [
   "numpy < 2",
   "matplotlib",
   "torch >= 1.10.0, <= 1.12.1",
   "torchvision >= 0.8.1",
   "torchmetrics < 0.8.0", # 0.8.0 is incompatible with lightning < 1.5.0
   "pytorch-lightning == 1.4.5",
   "tensorboard < 2.12",
   "tqdm",
   "imageio",
   "imageio-ffmpeg",
   "torchinfo",
   "pytest",
]
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/PhaseFieldICJ/nnpf"
repository = "https://github.com/PhaseFieldICJ/nnpf"
"Bug Tracker" = "https://github.com/PhaseFieldICJ/nnpf/issues"

[project.scripts]
nnpf = "nnpf.cmd:actions"

