[metadata]
name = nnpf
version = 1.0
author = Roland Denis, Garry Terii
author_email = denis@math.univ-lyon1.fr
description = Neural Network for Phase-Field models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://plmlab.math.cnrs.fr/phase-field-icj/nn-phase-field
project_urls =
    Bug Tracker = https://plmlab.math.cnrs.fr/phase-field-icj/nn-phase-field/-/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
   numpy
   matplotlib
   torch >= 1.6.0
   torchvision >= 0.7.0
   pytorch-lightning == 1.2.0
   tqdm
   imageio
   imageio-ffmpeg
   torchinfo
   pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nnpf = nnpf.cmd:actions

